--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,14 @@
+*.iml
+.gradle
+/local.properties
+/.idea/*
+/.idea/
+/.idea
+.DS_Store
 /build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+/app/release/app-release.apk
+/app/release/output-metadata.json
